compiler/test/compile/.fixtures/valid_program/other.kn
import { ABC } from "@/entry";

const BAR = "bar";
