compiler/test/compile/.fixtures/invalid_program/foo.kn
import { BAR } from "@/bar";

const const = "foo";
